--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,28 +4,31 @@ body {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 14px;
   color: #333;
-  background-color: #f8f9fa;
+  background-color: #ffffff;
   margin: 0;
-  padding: 20px;
+  padding: 100px;
+
 }
 
 h1 {
   font-size: 32px;
   font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom: 100px;
+  margin-top: 20px;
 }
 
 h2 {
   font-size: 22px;
   font-weight: normal;
   margin-bottom: 10px;
-  border-bottom: 2px solid #ddd;
+  border-bottom: 2px solid #878787;
   padding-bottom: 5px;
 }
 
 p {
   margin: 8px 0;
   line-height: 1.5;
+  
 }
 
 a {
@@ -92,12 +95,23 @@ a:hover {
   cursor: pointer;
 }
 
+#about table {
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  max-width: 800px;
+  margin: auto;
+}
+
+#about td {
+  vertical-align: middle; 
+}
+
 .clip-circle {
-  width: 450px;
-  height: 300px;  
-  border-radius: 0;
+  width: 300px; 
+  height: auto;
+  border-radius: 0; 
   object-fit: cover;
-  margin-top: 40px;
 }
 
 .dark-mode {
@@ -161,11 +175,7 @@ a:hover {
   }
 }
 
-@media screen and (min-width: 1400px) {
-  .section {
-    max-width: 1200px; 
-  }
-}
+
 
 @media screen and (min-width: 1024px) {
   .content-wrapper {
